@@ -33,5 +33,10 @@
 			{include file="customerbalancebox.html" limit=-10}
 		</TD>
 	</TR>
+	<TR>
+		<TD WIDTH="100%">
+			{include file="customeractions.html"}
+		</TD>
+	</TR>
 </TABLE>
 {include file="footer.html"}
