@@ -15,7 +15,9 @@ version ? (????-??-??):
   - BTS#0000734: fixed problem with \r\n on pdf invoices (alec)
   - hosting: auto-select domain when clicking on New account on accounts list
     after domain filter was used (alec)
- 
+  - added Actions tab in Customer Info with cutoff suspending and warning 
+    messages management as separate actions (alec)
+
 version 1.11.3 Quetesh (2008-03-26):
 
   - fixed 'suspended' filter on customers list (alec)
